src/objects/PM_AMI_Compliance__c.object
<CustomObject>
    <description>Tracks the AMI Compliance for a property. Used by Portfolio Management</description>
    <fields>
        <fullName>Associated_Property__c</fullName>
        <label>Associated Property</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>PM AMI Compliances</relationshipLabel>
        <relationshipName>PM_AMI_Compliances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_AMI__c</fullName>
        <label>Other AMI%</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X35_AMI__c</fullName>
        <label>35% AMI</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X50_AMI__c</fullName>
        <label>50% AMI</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X65_AMI__c</fullName>
        <label>65% AMI</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PM AMI Compliance</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>PM AMI Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM AMI Compliances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>